# slurmech

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  PROXY.md
examples/: pack_smoke.yaml  shaq.slurmech.toml
scripts/: xlog1-bridge-check.sh  xlog1-bridge-local.service  xlog1-bridge-local.sh
slurmech/: __init__.py  cli.py  config.py  credentials.py  jobs.py  pack.py  registry.py  remote.py  ssh.py  stream.py  sync.py
tests/: test_core.py  test_ssh.py  test_sync_jobs.py  test_version.py
