[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slurmech"
version = "0.1.0"
description = "Run any command on Slurm clusters — sync, submit, stream stdio and ports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Doğukan Yiğit Polat" }]
dependencies = [
  "paramiko>=3.4",
  "typer>=0.12",
  "rich>=13.7",
  "tomli>=2.0; python_version<'3.11'",
  "tomli-w>=1.0",
  "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
uv = ["uv>=0.4"]

[project.scripts]
slurmech = "slurmech.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["slurmech"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
